--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "tailwindcss-animate": "^1.0.6",
     "next-pwa": "^5.6.0",
     "framer-motion": "^10.12.16",
-    "react-hot-toast": "^2.4.1"
+    "react-hot-toast": "^2.4.1",
+    "critters": "^0.0.20"
   },
   "devDependencies": {
     "@types/node": "^20.3.1",
